# clarity-shield

./: .gitignore  COMPLETION_REPORT.md  CONTRIBUTING.md  DEMO.md  HACKATHON.md  LICENSE  PITCH.md  QUICKSTART.md  README.md  VERIFIED.txt  clarity-shield  clarity-shield.toml  demo.sh  pyproject.toml
.github/workflows/: clarity-security.yml  security-scan.yml
docs/: ARCHITECTURE.md  VULNERABILITY-GUIDE.md
examples/: DEMO.md
src/: scanner.py
test-contracts/: flash-loan-vuln.clar  safe-token.clar  vulnerable-admin-v3.clar  vulnerable-advanced-v2.clar  vulnerable-advanced.clar  vulnerable-defi-v2.clar  vulnerable-defi-v3.clar  vulnerable-defi.clar  vulnerable-governance.clar  vulnerable-lending.clar  vulnerable-nft-marketplace.clar  vulnerable-nft.clar  vulnerable-oracle.clar  vulnerable-token.clar  vulnerable-v4.clar  vulnerable-vault.clar
test-contracts/real/: SOURCES.md
