[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "clarity-shield"
version = "1.5.0"
description = "Automated security scanner for Clarity smart contracts on Stacks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "Clarity Shield Contributors"}]
keywords = ["stacks", "clarity", "security", "smart-contracts", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
clarity-shield = "scanner:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["scanner"]
